fix overflow carousel

--- a/src/app/feedback/feedback.carousel.component.scss
+++ b/src/app/feedback/feedback.carousel.component.scss
@@ -1,4 +1,4 @@
-$distance: 33.3%;
+$distance: 485px;
 
 @mixin blur() {
   content: "";
@@ -16,7 +16,6 @@ $distance: 33.3%;
   width: 100%;
   align-items: center;
   justify-content: center;
-  max-width: 70%;
   overflow: hidden;
   z-index: 99;
   border-radius: 10px;
@@ -124,7 +123,7 @@ $distance: 33.3%;
 
 @keyframes scaleDummy {
   from {
-    transform: translateX(-100%) scale(0.6);
+    transform: translateX(-$distance) scale(0.6);
   }
   to {
     transform: translateX(0) scale(0.9);
@@ -139,7 +138,7 @@ $distance: 33.3%;
 
 @keyframes scaleDummyNext {
   from {
-    transform: translateX(100%) scale(0.6);
+    transform: translateX($distance) scale(0.6);
   }
   to {
     transform: translateX(0) scale(0.9);
