--- a/src/app/feedback/feedback.component.scss
+++ b/src/app/feedback/feedback.component.scss
@@ -3,7 +3,8 @@
 @mixin comments($pos: relative, $bgc: rgba(61, 207, 183, 0.3)) {
   position: $pos;
   height: 150px;
-  min-width: 450px;
+  flex: 0 0 auto;
+  width: 450px;
   max-width: 450px;
   width: 100%;
   border: 1px solid #3dcfb76c;
@@ -40,7 +41,6 @@ h5 {
   font-family: "Fira Code", Arial, Helvetica, sans-serif;
   color: #3dcfb6;
 }
-
 
 .quotes {
   position: absolute;
